Fix options values vertical align

--- a/src/app/pages/options/options.component.scss
+++ b/src/app/pages/options/options.component.scss
@@ -14,4 +14,10 @@
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
+
+  .value-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 }
